--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,13 +9,18 @@ spring:
           lower-case-service-id: true #在eureka中，服务是以大写的形式注册的，可以转化成小写
       routes:
         - id: order-service #服务唯一ID标识
-          uri: lb://order-service # 注册中心的服务id
+          uri: lb://order-service # 注册中心的服务id, lb是负载均衡的意思
           predicates:
             - Path=/order/** #请求转发
           filters:
             - StripPrefix=1 #切割请求，去除/order/
         #TODO: 添加Inventory Service的反向代理
-
+        - id: inventory-service
+          uri: lb://inventory-service
+          predicates:
+            - path=/in/**
+          filters:
+            - StripPrefix=1 #切割请求，去除/in/
         - id: header_route
           uri: http://baidu.com
           predicates:
