--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,13 +14,14 @@ spring:
             - Path=/order/** #请求转发
           filters:
             - StripPrefix=1 #切割请求，去除/order/
-        #TODO: 添加Inventory Service的反向代理
-        - id: inventory-service
-          uri: lb://inventory-service
+
+        - id: inventory-service #服务唯一ID标识
+          uri: lb://inventory-service # 注册中心的服务id, lb是负载均衡的意思
           predicates:
-            - path=/in/**
+            - Path=/in/** #请求转发
           filters:
-            - StripPrefix=1 #切割请求，去除/in/
+            - StripPrefix=1 #切割请求，去除/order/
+
         - id: header_route
           uri: http://baidu.com
           predicates:
